# Titanic_project_MLOps_lab_0

./: .gitignore  Makefile  README.md  dvc.yaml  mlflow.db  params.yaml  pyproject.toml  trainer.py
.dvc/: config
conf/: config.yaml
conf/data/: default.yaml
conf/mlflow/: default.yaml
conf/model/: logistic.yaml  random_forest.yaml
conf/training/: default.yaml
data/: processed.dvc
docs/: mkdocs.yml
docs/docs/: index.md
models/: logistic_pipeline.pkl  logistic_regression.pkl  logistic_regression_pipeline.pkl  random_forest.pkl  random_forest_pipeline.pkl
outputs/2026-04-24/12-23-46/.hydra/: config.yaml  hydra.yaml
outputs/2026-04-24/14-40-21/.hydra/: hydra.yaml
outputs/2026-04-24/14-44-56/.hydra/: hydra.yaml
outputs/2026-04-24/14-45-38/.hydra/: hydra.yaml
outputs/2026-04-24/14-45-57/.hydra/: hydra.yaml
outputs/2026-04-24/14-48-17/.hydra/: hydra.yaml
outputs/2026-04-24/14-51-24/.hydra/: hydra.yaml
outputs/2026-04-24/14-58-21/.hydra/: hydra.yaml
outputs/2026-04-24/14-59-44/.hydra/: hydra.yaml
outputs/2026-04-24/15-01-32/.hydra/: hydra.yaml
outputs/2026-04-24/15-02-32/.hydra/: hydra.yaml
outputs/2026-04-24/15-02-50/.hydra/: hydra.yaml
reports/: logistic_metrics.json  metrics.json  metrics.txt  random_forest_metrics.json
src/: config.py
src/prediction/: predict.py
src/training/: download_data.py  evaluate.py  pipeline.py  preprocess.py  preprocess_data.py  promote_model.py  train.py
src/training/data/: download_data.py  load.py
src/training/features/: preprocess.py  transformers.py
(+52 files in other folders)
